--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -13,6 +13,7 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="AddCorrectTable.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
